# recipe_swig

./: .release  CMakeLists.txt  README.md
src/: CMakeLists.txt  any.i  blank.i  bridge.cpp  bridge.hpp  bridge.i  bridge_java.i  bridge_lua.i  optional.i  variant.i
test/: CMakeLists.txt  TestAnyJava.java  TestJava.java  TestOptionalJava.java  TestVariantJava.java  test_any_cxx.cpp  test_any_lua.lua  test_lua.lua  test_optional_cxx.cpp  test_optional_lua.lua  test_variant_cxx.cpp  test_variant_lua.lua
