PROJECT(recipe_swig)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_TESTING()
INCLUDE(CTest)

FIND_PACKAGE(JAVA REQUIRED)
INCLUDE(UseJava)
FIND_PACKAGE(JNI REQUIRED)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src
  ${CMAKE_INSTALL_PREFIX}/include
  ${JNI_INCLUDE_DIRS}
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
